# ai-jail

./: CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  mounts.rs  output.rs  sandbox.rs  signals.rs
src/sandbox/: bwrap.rs  mod.rs  seatbelt.rs
